--- a/public/m1/b/css/s04.css
+++ b/public/m1/b/css/s04.css
@@ -5,7 +5,7 @@ body {
 
 /* rule for the "p" elements */
 p {
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* rule for classified elements */
